# phylo2vec_dev

./: .gitignore  .gitmodules  README.md  benchmarks.md  demo.ipynb  demo_matrix.ipynb  pyproject.toml  setup.py
benchmarks/: bench_matrix_size.py  bench_size.py  plot.py
cpp/: CMakeLists.txt  README.md  main.cpp  pyproject.toml
cpp/R/: build.R  phylo2vec.cpp
cpp/base/: avl.cpp  avl.hpp  core.hpp  to_newick.cpp  to_newick.hpp  to_vector.cpp  to_vector.hpp
cpp/benchmarks/: bench_base.cpp
cpp/matrix/: core.hpp  to_matrix.hpp  to_newick.cpp  to_newick.hpp
cpp/metrics/: pairwise.cpp  pairwise.hpp
cpp/ops/: vector.cpp  vector.hpp
cpp/python/: CMakeLists.txt  phylo2vec.cpp
cpp/tests/: config.cpp  test_utils.cpp  test_v2newick2v.cpp
cpp/utils/: avl.cpp  avl.hpp  fenwick.cpp  fenwick.hpp  newick.cpp  newick.hpp  random.cpp  random.hpp  validation.cpp  validation.hpp  vector.cpp  vector.hpp
jl/: Manifest.toml  Project.toml  base.jl  benchmark_jl.ipynb  to_newick.jl  to_vector.jl
paper/: paper.bib  paper.md
phylo2vec/: main.py  to_newick.py  to_vector.py  utils.py
phylo2vec/base/: to_newick.py  to_vector.py
phylo2vec/datasets/: __init__.py  _base.py
phylo2vec/datasets/descr/: M501.md  fluA.md  h3n2.md  yeast.md  zika.md
phylo2vec/matrix/: __init__.py  to_matrix.py  to_newick.py
phylo2vec/opt/: __init__.py  _base.py  _discrete.py  _gradme.py  _gradme_losses.py
phylo2vec/opt/hc/: __init__.py  _hc.py  _hc_losses.py
phylo2vec/tests/: config.py  test_m2newick2m.py  test_metrics.py  test_utils.py  test_v2newick2v.py
phylo2vec/utils/: __init__.py  newick.py  random.py  validation.py  vector.py
