[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "phylo2vec"
version = "1.0.0"
description = "Phylo2Vec: integer vector representation of binary (phylogenetic) trees"
readme = "README.md"
authors = [{ name = "Neil Scheidwasser", email = "neil.clow@sund.ku.dk" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.version = ">=3.22.1"
build.verbose = true

[tool.scikit-build.cmake.define]
BUILD_BENCHMARKS = "OFF"
BUILD_PYTHON = "ON"
BUILD_TESTING = "OFF"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
